--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Someone's Blog</title>
+    <title>登录界面</title>
 </head>
 <body>
-    <h1>Hello, Blog World ~</h1>
+    <div class="container">
+        <div class="login-container">
+            <h2>登录</h2>
+            <form>
+                <label for="username">用户名:</label>
+                <input type="text" id="username" name="username">
+                <label for="password">密码:</label>
+                <input type="password" id="password" name="password">
+                <input type="submit" value="登录">
+            </form> 
+        </div>
+    </div>
 </body>
 </html>
