--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>登录界面</title>
+    <link href="css/login.css" rel="stylesheet">
 </head>
 <body>
     <div class="container">
